<?xml version="1.0"?>
<package>
  <name>evarobotmodel_simulator</name>
  <version>0.0.1</version>
  <description>
    The evarobot_simulator meta package provides all the basic packages for Gazebo model.
  </description>
  <author>İnovasyon Mühendislik</author>
  <maintainer email="bilgi@inovasyobnuhendislik.com">İnavasyon Mühendislik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>evarobotmodel_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
